fix: fix overflow x not working

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
   }
 
   html {
-    @apply antialiased bg-bg text-white leading-7 overscroll-y-none;
+    @apply antialiased bg-bg text-white leading-7 overscroll-y-none overflow-x-hidden;
   }
 
   [type="text"],
